--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    default_api_version: "2.0"  
 
 services:
     # default configuration for services in *this* file
@@ -24,3 +25,17 @@ services:
     # please note that last definitions always *replace* previous ones
     annotation_reader:
         class: Doctrine\Common\Annotations\AnnotationReader
+
+    # App\OpenApi\JwtDecorator:
+    #     decorates: 'api_platform.openapi.factory'
+    #     arguments: ['@.inner']
+    
+    # jms_serializer.object_constructor:
+    #     alias: jms_serializer.existing_object_constructor
+
+    # jms_serializer.existing_object_constructor:
+    #     class: App\Service\ExistingObjectConstructor
+    #     arguments: ["@jms_serializer.object_constructor"]
+
+    # app_versionin_service:
+    #     class: App\Service\VersioningService
